--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -10,22 +10,22 @@
             <!-- lista de itens do menu -->
             <ul class="navbar-nav mr-auto">
                 <li class="navbar-nav mr-auto">
-                    <a class="nav-link" href="index.php">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="sobre.php">Sobre</a>
+                    <a class="nav-link" href="/sobre/">Sobre</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="contato.php">Contato</a>
+                    <a class="nav-link" href="/contato/">Contato</a>
                 </li>
             </ul>
 
             <!-- form de busca -->
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="botao-form-pesquisa">Pesquisar</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="color:white;">Pesquisar</button>
             </form>
         </div>
     </nav>
