--- a/templates/includes/rodape.html
+++ b/templates/includes/rodape.html
@@ -1,4 +1,4 @@
-    <footer class="page-footer font-small" id="rodape">
+    <footer class="page-footer font-small" style="color: white;">
         <!-- elementos do rodapé -->
         <div style="background-color: #2d7218;">
             <div class="container">
@@ -7,14 +7,17 @@
                         <h6 class="mb-0">Visite nossas redes sociais:</h6>
                     </div>
                     <div class="col-md-6 col-lg-7 text-center text-md-right">
-                        <a class="fb-ic" href="#" style="color: white;">
+                        <a class="fb-ic fa-lg" href="#" style="color: white;">
                             <i class="fab fa-facebook white-text mr-4"> </i>
                         </a>
-                        <a class="tw-ic" href="#" style="color: white;">
+                        <a class="tw-ic fa-lg" href="#" style="color: white;">
                             <i class="fab fa-twitter white-text mr-4"> </i>
                         </a>
-                        <a class="ins-ic" href="#" style="color: white;">
-                            <i class="fab fa-instagram white-text"> </i>
+                        <a class="ins-ic fa-lg" href="http://instagram.com/scienceonthetable" target="_blank" style="color: white;">
+                            <i class="fab fa-instagram white-text mr-4"> </i>
+                        </a>
+                        <a class="yt-ic fa-lg" href="#" style="color: white;">
+                            <i class="fab fa-youtube white-text"> </i>
                         </a>
 
                     </div>
@@ -24,7 +27,7 @@
             </div>
         </div>
         <!-- copyright -->
-        <div class="footer-copyright text-center py-3" id="rodape-copyright">
+        <div class="footer-copyright text-center py-3" style="background-color: #133d06;">
             © 2018 Copyright: The Science's on the Table
         </div>
     </footer>
