--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,13 @@
-<?php include "includes/head.php" ?>
+{% include "includes/head.html" %}
+
     <title>The Science's on the Table - Página Inicial</title>
 </head>
 
-<!-- corpo do site -- >
 <body>
-    <!-- menu superior (fixado) -->
-<?php include "includes/menu.php"  ?>
-    <!-- fim do menu superior (fixado) -->
+{% include "includes/menu.html" %}
 
+{% include "includes/chamada.html" %}
 
-
-    <!-- inicio div de chamada do site -->
-<?php include "includes/chamada.php"  ?>
-    <!-- fim div de chamada do site -->
-
-
-    <!-- (new) inicio div de corpo do site -->
     <div class="jumbotron-fluid">
         <div class="container">
             <section class="my-5">
@@ -37,7 +29,7 @@
                         <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
                         <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
                         <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
-                        <a class="btn btn-success" id="botao-post-completo" role="button">Ver Mais</a>
+                        <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
                     </div>
                     <!-- fim div do texto -->
                 </div>
@@ -59,7 +51,7 @@
                         <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
                         <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
                         <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
-                        <a class="btn btn-success" id="botao-post-completo" role="button">Ver Mais</a>
+                        <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
                     </div>
                     <!-- fim div do texto -->
                 </div>
@@ -81,7 +73,7 @@
                         <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
                         <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
                         <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
-                        <a class="btn btn-success" id="botao-post-completo" role="button">Ver Mais</a>
+                        <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
                     </div>
                     <!-- fim div do texto -->
                 </div>
@@ -94,6 +86,4 @@
     </div>
     <!-- (new) fim div de corpo do site -->
 
-
-    <!-- rodapé do site -->
-<?php include "includes/rodape.php" ?>
+{% include "includes/rodape.html" %}
