Migração completa para Python + add icone de logo temporario

--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -1,17 +1,17 @@
-<?php include "includes/head.php" ?>
+{% include "admin/includes/head.html" %}
     <title>The Science's on the Table - Novo Post</title>
 </head>
 
 <!-- corpo do site -- >
 <body>
     <!-- menu superior (fixado) -->
-<?php include "includes/menu.php"  ?>
+{% include "admin/includes/menu.html" %}
     <!-- fim do menu superior (fixado) -->
 
 
 
     <!-- inicio div de chamada do site -->
-<?php include "includes/chamada.php"  ?>
+{% include "admin/includes/chamada.html" %}
     <!-- fim div de chamada do site -->
 
 
@@ -48,4 +48,4 @@
 
 
     <!-- rodapé do site -->
-<?php include "../includes/rodape.php" ?>
+{% include "includes/rodape.html" %}
