--- a/templates/admin/includes/head.html
+++ b/templates/admin/includes/head.html
@@ -17,4 +17,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
     <!-- CSS próprio -->
-    <link href="../css/main.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{{url_for('.static', filename='css/main.css')}}">
+
+    <!-- icone -->
+    <link rel="icon" href="{{url_for('.static', filename='logo.png')}}">
