--- a/templates/admin/includes/menu.html
+++ b/templates/admin/includes/menu.html
@@ -10,19 +10,19 @@
             <!-- lista de itens do menu -->
             <ul class="navbar-nav mr-auto">
                 <li class="navbar-nav mr-auto">
-                    <a class="nav-link" href="index.php">Início<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/admin/">Início<span class="sr-only">(current)</span></a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="novo-post.php">Novo Post</a>
+                    <a class="nav-link" href="/admin/novo-post/">Novo Post</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Usuários</a>
+                    <a class="nav-link" href="/admin/usuarios/">Usuários</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.php" target="_blank">Exibir Site</a>
+                    <a class="nav-link" href="/" target="_blank">Exibir Site</a>
                 </li>
             </ul>
 
