--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
     <!-- CSS próprio -->
-    {% block styles %}
-        <link rel="stylesheet" href="{{url_for('.static', filename='css/main.css')}}">
-    {% endblock %}
+    <link rel="stylesheet" href="{{url_for('.static', filename='css/main.css')}}">
+
+    <!-- icone -->
+    <link rel="icon" href="{{url_for('.static', filename='logo.png')}}">
