Add posts dinamicos + menu desfixado

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,71 +15,30 @@
 
                 <!-- lista de posts -->
                 <!-- post #1 -->
+                {% for post in posts %}
+                {% set foto = "/static/{}".format(post[3]) %}
                 <div class="row">
                     <!-- div da imagem -->
                     <div class="col-lg-5 col-xl-4">
                         <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
-                            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/2.jpg" alt="Imagem Ilustrativa" title="Imagem Ilustrativa">
+                            <img class="img-fluid" src="{{ foto }}" alt="{{ post[1] }}" title="{{ post[1] }}">
                         </div>
                     </div>
                     <!-- fim div da imagem -->
 
                     <!-- div do texto -->
                     <div class="col-lg-7 col-xl-8">
-                        <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
-                        <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
-                        <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
+                        <h3 class="font-weight-bold mb-3">{{ post[1] }}</h3>
+                        <p class="dark-grey-text">{{ post[5] }}</p>
+                        <p>Publicado por: <a class="font-weight-bold">{{ post[4] }}</a>, {{ post[2] }}</p>
                         <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
                     </div>
                     <!-- fim div do texto -->
                 </div>
 
                 <hr class="my-5">
-
-                <!-- post #2 -->
-                <div class="row">
-                    <!-- div da imagem -->
-                    <div class="col-lg-5 col-xl-4">
-                        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
-                            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/6.jpg" alt="Imagem Ilustrativa" title="Imagem Ilustrativa">
-                        </div>
-                    </div>
-                    <!-- fim div da imagem -->
-
-                    <!-- div do texto -->
-                    <div class="col-lg-7 col-xl-8">
-                        <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
-                        <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
-                        <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
-                        <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
-                    </div>
-                    <!-- fim div do texto -->
-                </div>
-
-                <hr class="my-5">
-
-                <!-- post #3 -->
-                <div class="row">
-                    <!-- div da imagem -->
-                    <div class="col-lg-5 col-xl-4">
-                        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
-                            <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/17.jpg" alt="Imagem Ilustrativa" title="Imagem Ilustrativa">
-                        </div>
-                    </div>
-                    <!-- fim div da imagem -->
-
-                    <!-- div do texto -->
-                    <div class="col-lg-7 col-xl-8">
-                        <h3 class="font-weight-bold mb-3">[Título do Post]</h3>
-                        <p class="dark-grey-text">Spicy jalapeno bacon ipsum dolor amet strip steak frankfurter chuck capicola leberkas t-bone. Tri-tip ball tip pastrami, ham hock porchetta tongue fatback bresaola chuck flank cupim capicola prosciutto shankle frankfurter. Brisket jerky fatback meatball. Hamburger rump pork biltong, pig fatback chicken tri-tip ball tip alcatra strip steak ham hock short loin swine...</p>
-                        <p>Publicado por: <a class="font-weight-bold">Fulano de Tal</a>, 01/01/1970</p>
-                        <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
-                    </div>
-                    <!-- fim div do texto -->
-                </div>
-
-                <hr class="my-5">
-
+                {% endfor %}
+                
                 <!-- fim da lista de posts-->
             </section>
         </div>
