--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -24,14 +24,15 @@
                 <div class="row text-center text-md-left">
                     {% for usuario in usuarios %}
                     {% set foto = "/static/{}".format(usuario[9]) %}
+                    {% set nome = usuario[1] + ' ' + usuario[2] %}
                     <div class="col-xl-6 col-lg-12 mb-5 d-md-flex justify-content-between">
                         <!-- foto -->
                         <div class="avatar mb-md-0 mb-4 mx-4">
-                            <img src="{{foto}}" class="img-fluid rounded z-depth-1" alt="{{ usuario[1] }} {{ usuario[2] }}" title="{{ usuario[1] }} {{ usuario[2] }}">
+                            <img src="{{foto}}" class="img-fluid rounded z-depth-1" alt="{{ nome }}" title="{{ nome }}">
                         </div>
                         <!-- descrição -->
                         <div class="mx-4">
-                            <h4 class="font-weight-bold mb-3">{{ usuario[1] }} {{ usuario[2] }}</h4>
+                            <h4 class="font-weight-bold mb-3">{{ nome }}</h4>
                             <h6 class="font-weight-bold grey-text mb-3">{{ usuario[8] }}</h6>
                             <p class="grey-text">{{ usuario[7] }}</p>
                             <!-- redes sociais -->
