--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                     <!-- div do texto -->
                     <div class="col-lg-7 col-xl-8">
                         <h3 class="font-weight-bold mb-3">{{ post[1] }}</h3>
-                        <p class="dark-grey-text">{{ post[5] }}</p>
+                        <p class="dark-grey-text">{{ post[5]|safe }}</p>
                         <p>Publicado por: <a class="font-weight-bold">{{ post[4] }}</a>, {{ post[2] }}</p>
                         <a class="btn btn-success" style="color:white;" role="button">Ver Mais</a>
                     </div>
