Corrigindo bug de produção (não carregando editor html)

--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -1,7 +1,7 @@
 {% include "admin/includes/head.html" %}
     <title>The Science's on the Table - Novo Post</title>
     <!-- summernote css -->
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.css" rel="stylesheet">
 </head>
 
 <!-- corpo do site -- >
@@ -77,7 +77,7 @@
     <!-- rodapé do site -->
 {% include "includes/rodape.html" %}
 <!-- summernote js -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.11/summernote.js"></script>
 <script>
     $('#texto').summernote({
         placeholder: 'Conteúdo do Post',
