Modularização parcial do código + autor de post pego dinamicamente + logout admin

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -5,7 +5,7 @@
 <!-- corpo do site -- >
 <body>
     <!-- menu superior (fixado) -->
-{% include "admin/includes/menu.html" %}
+{% include "admin/includes/menu_login.html" %}
     <!-- fim do menu superior (fixado) -->
 
 
