--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -47,7 +47,7 @@
                     <!-- campo autor-->
                     <div class="form-group">
                         <label for="autor">Autor:</label>
-                        <input type="text" class="form-control" id="autor" name="autor" placeholder="Autor" value="Marcos Sombra" required readonly>
+                        <input type="text" class="form-control" id="autor" name="autor" placeholder="{{ autor }}" value="{{ autor }}" required readonly>
                     </div>
                     <!-- campo imagem-->
                     <div class="form-group">
