Add pagina de todos os posts + qtd limitada de posts no index + att de forms

--- a/templates/contato.html
+++ b/templates/contato.html
@@ -12,7 +12,7 @@
         <div class="container">
             <!-- form de contato -->
             <div class="form-area">
-                <form role="form">
+                <form role="form" method="POST">
                     <h2 class="h1-responsive font-weight-bold text-center my-5">Contato</h2>
                     <!-- campo nome-->
                     <div class="form-group">
@@ -30,7 +30,7 @@
                         </span>
                     </div>
                     <!-- botão de envio -->
-                    <button type="button" id="enviar" name="enviar" class="btn btn-success pull-right">Enviar</button>
+                    <button type="submit" id="enviar" name="enviar" class="btn btn-success pull-right">Enviar</button>
                 </form>
 
             </div>
