--- a/templates/admin/novo-post.html
+++ b/templates/admin/novo-post.html
@@ -52,7 +52,7 @@
                     <!-- campo imagem-->
                     <div class="form-group">
                         <label for="img">Imagem:</label>
-                        <input type="file" class="form-control" id="img" name="img" required>
+                        <input type="file" class="form-control-file" id="img" name="img" required>
                     </div>
                     <!-- campo post -->
                     <div class="form-group">
