--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -14,6 +14,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="/posts/">Posts</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="/sobre/">Sobre</a>
                 </li>
 
