--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -14,7 +14,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/posts/">Posts</a>
+                    <a class="nav-link" href="/posts/1">Posts</a>
                 </li>
 
                 <li class="nav-item">
