--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -14,7 +14,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/posts/1">Posts</a>
+                    <a class="nav-link" href="/posts/">Posts</a>
                 </li>
 
                 <li class="nav-item">
@@ -27,8 +27,8 @@
             </ul>
 
             <!-- form de busca -->
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
+            <form class="form-inline" method="get" action="/busca">
+                <input class="form-control mr-sm-2" type="search" name="q" placeholder="Pesquisar" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="color:white;">Pesquisar</button>
             </form>
         </div>
